wrote the questions and start game function

--- a/index.html
+++ b/index.html
@@ -2,26 +2,48 @@
 <html lang="en-us">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Contact | Andy Edstrom</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <meta charset="UTF-8">
+    <title>Triva Game</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
-<h1 id=pagetitle>How Well Do You Know Me?</h1>
-    <h2 id=timer>Time Remaining: </h2>
-    <container class=questions>
-        <h3 id="question1">How many dogs do I have?</h3>
-        <h3 id="question2">When is my birthday?</h3>
-        <h3 id="question3">What city did I grow up?</h3>
-        <h3 id="question4">What is my favorite sport?</h3>
-        <h3 id="question5">Where do I work?</h3>
-    </container>
 
+ 
+  <div class="container">
+    <div class="header text-center clearfix">
+      <h1 class="text-muted">How well do you know me?</h1>
+    </div>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+      <div id="game">
+        <h2>How well do you know me?</h2>
+        <p id="remaining-time" class="lead">Remaining Time: <span id="timer"></span></p>
+        <p id="question" class="lead"></p>
+      </div>
+      <div id="results">
+      </div>
+    </div>
 
+    <div class="row">
+      <div id="choices" class="text-center">
+        <button id="start" class="btn btn-info btn-lg">Start Game</button>
+        <div id="options">
+          
+        </div>
+        
+      </div>
+    </div>
 
-    <script src= "/assets/javascript/app.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  </div>
+    <!-- jQuery  -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Bootstrap -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+    <script src="assets/javascript/app.js"></script>
+
 </body>
 
 </html>
